Tornado almost